Se implementa la logica del administrador y del parqueadero