@@ -2,10 +2,10 @@ package co.edu.uco.estacionaplus.infrastructure.adapter.repository;
 
 import co.edu.uco.estacionaplus.domain.model.TypeVehicle;
 import co.edu.uco.estacionaplus.domain.port.TypeVehicleRepository;
+import co.edu.uco.estacionaplus.infrastructure.adapter.entity.TypeVehicleEntity;
 import co.edu.uco.estacionaplus.infrastructure.adapter.repository.jpa.TypeVehicleDAO;
 import org.springframework.stereotype.Repository;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Repository
 public class TypeVehicleRepositoryPostgreSQL implements TypeVehicleRepository
@@ -20,18 +20,23 @@ public class TypeVehicleRepositoryPostgreSQL implements TypeVehicleRepository
     @Override
     public List<TypeVehicle> getAll()
     {
-        return this.typeVehicleDAO.findAll().stream().map(entity -> TypeVehicle.create(entity.getCode(), entity.getName())).collect(Collectors.toList());
+        return this.typeVehicleDAO.findAll().stream().map(this::assembleTypeVehicle).toList();
     }
 
     @Override
     public TypeVehicle getByCode(int code)
     {
-        return this.typeVehicleDAO.findById(code).map(entity -> TypeVehicle.create(entity.getCode(), entity.getName())).orElse(null);
+        return this.typeVehicleDAO.findById(code).map(this::assembleTypeVehicle).orElse(null);
     }
 
     @Override
     public boolean exists(TypeVehicle typeVehicle)
     {
         return this.typeVehicleDAO.existsById(typeVehicle.getCode());
+    }
+
+    private TypeVehicle assembleTypeVehicle(TypeVehicleEntity typeVehicle)
+    {
+        return TypeVehicle.create(typeVehicle.getCode(), typeVehicle.getName());
     }
 }
